--- a/troisieme_page.css
+++ b/troisieme_page.css
@@ -17,3 +17,28 @@ display: flex;
 gap: 40px;
 margin-top: 40px;
 }
+.carousel-section {
+width: 65%;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+
+.carousel {
+width: 100%;
+height: 400px;
+overflow: hidden;
+border-radius: 16px;
+box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+position: relative;
+}
+
+
+.carousel img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+position: absolute;
+animation: slide 12s infinite;
+}
