--- a/troisieme_page.css
+++ b/troisieme_page.css
@@ -77,3 +77,38 @@ margin-top: 20px;
 font-size: 16px;
 color: #555;
 }
+.side-panel {
+width: 35%;
+background: #f8c9d4;
+padding: 30px;
+border-radius: 20px;
+box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+
+.side-panel ul {
+padding-left: 20px;
+font-size: 18px;
+line-height: 1.8;
+}
+
+
+.louer-btn {
+width: 100%;
+padding: 15px;
+background: #fff;
+border-radius: 12px;
+border: none;
+font-size: 18px;
+font-weight: bold;
+cursor: pointer;
+transition: 0.3s;
+}
+
+
+.louer-btn:hover {
+background: #ffe6ed;
+}
