--- a/troisieme_page.css
+++ b/troisieme_page.css
@@ -69,6 +69,26 @@ background: #eaeaea;
 border-radius: 50%;
 }
 
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.form label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.form input {
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+
 
 .description {
 max-width: 80%;
