--- a/troisieme_page.css
+++ b/troisieme_page.css
@@ -2,7 +2,7 @@ body {
 margin: 0;
 padding: 0;
 font-family: Arial, sans-serif;
-background: #f7f7f7;
+background: #d9ecf8;
 display: flex;
 justify-content: center;
 align-items: flex-start;
@@ -55,11 +55,13 @@ margin-top: 20px;
 }
 
 
-.icons {
-display: flex;
-gap: 20px;
-margin-top: 20px;
+.icone {
+    width: 40px;  
+    height: 40px;  
+    object-fit: contain; 
 }
+
+
 
 
 .icons div {
@@ -99,7 +101,7 @@ color: #555;
 }
 .side-panel {
 width: 35%;
-background: #f8c9d4;
+background: #fbc8d4;
 padding: 30px;
 border-radius: 20px;
 box-shadow: 0 4px 12px rgba(0,0,0,0.1);
